<resources>
    <string name="app_name">衣加衣</string>
    <string name="inc_name">北京衣加衣科技有限公司</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="hello">Hello World, PullToRefreshActivity!</string>
    <string name="filler_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec sollicitudin mauris varius lacus porttitor eget blandit massa facilisis. Nulla pellentesque odio sed purus fermentum vitae viverra orci faucibus. Sed ullamcorper condimentum vulputate. Curabitur sit amet convallis velit. Vestibulum posuere eleifend risus ac adipiscing. Nam pulvinar nulla a velit faucibus imperdiet. Praesent eget nisi ac justo blandit sagittis. Maecenas at leo nisi, nec varius nisl.\nIn hac habitasse platea dictumst. Morbi neque tortor, vestibulum sed viverra a, luctus vel lorem. Nunc turpis eros, varius eget commodo et, euismod at eros. Sed tincidunt mi purus, vel posuere dui. Vestibulum ante lectus, porta sed mattis bibendum, scelerisque cursus sapien. Cras ultrices imperdiet fermentum. Aenean nisi nulla, euismod non blandit ac, dictum quis libero. Morbi consectetur tempor mollis. Suspendisse eget nunc arcu, vel ullamcorper augue. Integer malesuada, diam nec faucibus mollis, nisl velit euismod enim, ac mattis justo neque sit amet mauris. Vivamus pretium imperdiet pharetra.\nInteger sagittis augue sit amet lectus pulvinar sit amet commodo tortor mattis. Maecenas quis tellus eget ante eleifend sollicitudin non et nibh. Maecenas luctus euismod tristique. Fusce in odio nec diam blandit facilisis. Sed nec arcu eros. Vivamus quis tortor a metus tempus aliquam eget volutpat magna. Pellentesque id ultrices dolor. Sed blandit aliquet quam. Phasellus dapibus euismod vulputate. Aenean blandit, elit vitae vestibulum tincidunt, metus dui accumsan nulla, sit amet vehicula mauris lacus in est. Etiam dignissim pellentesque nulla vel malesuada. Cras vel lorem justo.\nSed condimentum nisl sit amet libero vestibulum hendrerit. Duis auctor tempus placerat. Proin velit ante, ornare nec dictum nec, hendrerit eu arcu. Etiam ut diam ornare quam venenatis pulvinar vitae vel leo. Vivamus consectetur, ante id interdum rhoncus, magna eros pulvinar lacus, a gravida nibh arcu vitae eros. Nulla scelerisque laoreet feugiat. Mauris sit amet gravida felis.\nNulla ac dolor sapien, vestibulum venenatis justo. Cras placerat velit vitae nibh pellentesque ultricies. Suspendisse adipiscing enim eu justo iaculis eu pretium urna fermentum. Duis porttitor nunc non nunc mattis vestibulum. Etiam elit tellus, feugiat in bibendum eget, adipiscing nec metus. Ut ut sem lacus, quis faucibus diam. Curabitur a nulla fermentum tortor dignissim posuere. Fusce faucibus ante ut sem imperdiet imperdiet eget vitae lorem. Etiam fringilla ornare ipsum, in sagittis quam ornare vitae. Nullam venenatis orci sit amet sapien adipiscing gravida. Proin turpis lectus, hendrerit vitae vehicula ut, auctor ac lectus. Pellentesque sollicitudin blandit ligula quis commodo. Mauris vulputate lectus in velit luctus aliquam. Quisque eget tincidunt elit. Quisque et augue quam, sed scelerisque eros.</string>
    <string name="generic_server_down" translatable="false">Server down</string>
    <string name="generic_error" translatable="false">No internet</string>
    <string name="no_internet" translatable="false">No internet</string>
    <string name="app_ver">VolleyPlus v1.0</string>
    <string name="app_company">Developed By DWorkS</string>
    <string name="app_url">http://www.dworks.in</string>
    <string name="app_about_info">To make a small difference.</string>
    <string name="app_contrib">Contributions by Hari Krishna Dulipudi</string>
    <string name="app_about">This library is improvements to Volley along with full image caching.</string>
    <string name="twitter"><a href="https://twitter.com/1HaKr"> Twitter</a></string>
    <string name="gplus"><a href="https://plus.google.com/109240246596102887385"> Google+</a></string>
    <string name="picasso_app_name">RoundedPicassoView</string>
    <string-array name="action_list">
        <item>Bitmap</item>
        <item>Ovals</item>
        <item>Picasso</item>
        <item>Color</item>
    </string-array>
    <string name="clear_cache_menu">Clear Caches</string>
    <string name="clear_cache_complete_toast">Caches have been cleared</string>
    <string name="imageview_description">Image Thumbnail</string>
    <string name="no_network_connection_toast">No network connection found</string>
    <string name="activity_simple_cache">Simple Image Cache</string>
    <string name="external_storage_unavailable">sd卡不可用</string>
    <string name="image_description">衣+衣</string>
    <string name="need_login">点击登录</string>
    <string name="time_some_seconds_ago">%s秒前</string>
    <string name="time_some_minutes_ago">%s分钟前</string>
    <string name="time_some_hours_ago">%s小时前</string>
    <string name="time_yester_day">昨天</string>
    <string name="time_the_day_before_yester_day">前天</string>
    <string name="time_some_day_ago">%s天前</string>
    <string name="time_last_week">上周</string>
    <string name="time_some_week_ago">%s周前</string>
    <string name="time_some_month_ago">%s月前</string>
    <string name="progressing_title">请稍后</string>
    <string name="progressing">处理中&#8230;</string>
    <string name="update_toast_up_to_date">这已是最新版本</string>
    <string name="update_title">版本更新：%s</string>
    <string name="update_btn_pos">立即更新</string>
    <string name="update_btn_neg">以后再说</string>
    <string name="downloading">下载中,请稍侯</string>
    <string name="activity_toast_press_again_to_exit">再按一次退出</string>
    <string name="popup_capture">拍照</string>
    <string name="popup_pick">相册</string>
    <string name="popup_fav">收藏</string>
    <string name="popup_focus">关注</string>
    <string name="indictor_tab_home">首页</string>
    <string name="indictor_tab_t">T台</string>
    <string name="indictor_tab_msg">消息</string>
    <string name="indictor_tab_my">我的</string>
    <string name="indictor_tab_worth">值得买</string>
    <string name="indictor_tab_epe">衣+衣</string>
    <string name="indictor_tab_master">搭配师</string>
    <string name="network_toast_no_connection">没有网络连接</string>
    <string name="network_toast_network_error">网络错误</string>
    <string name="network_toast_token_expired">登陆信息失效，请重新登录</string>
    <string name="network_toast_timeout">网络超时</string>
    <string name="network_toast_server_error">服务器错误</string>
    <string name="network_empty_view">网络不给力\n单击页面重新加载</string>
    <string name="network_image_upload_request_faild">图片上传失败</string>
    <string name="account_login_frag_title">"登录"</string>
    <string name="account_login_divider">"使用第三方帐号登录"</string>
    <string name="account_login_by_qq">"qq"</string>
    <string name="account_login_by_wechat">"wechat"</string>
    <string name="account_login_by_weibo">"微博"</string>
    <string name="account_frag_hint_phone">"手机号"</string>
    <string name="account_frag_hint_verifycode">"验证码"</string>
    <string name="account_frag_hint_password">"密码"</string>
    <string name="account_frag_reset_password">"忘记密码？"</string>
    <string name="account_reg_frag_title">"注册"</string>
    <string name="account_reg_frag_btn_verifycode">"获取验证码"</string>
    <string name="account_toast_wait_for_verify_code">已发送验证码，请查收</string>
    <string name="account_btn_verifycode_enable_delay">等待(%d秒)</string>
    <string name="account_toast_check_phone">请检查电话号码是否正确</string>
    <string name="account_register_toast_check_phone">请输入正确的电话号码</string>
    <string name="account_register_toast_check_password">密码格式有误</string>
    <string name="account_register_toast_check_user_name">用户名格式有误</string>
    <string name="account_register_toast_check_verify_code">请输入正确的验证码</string>
    <string name="account_register_toast_check_agreement">同意协议才能继续</string>
    <string name="account_register_toast_wait_for_verify_code">已发送验证码，请查收</string>
    <string name="account_register_toast_register_ok_phone">注册成功，用户名及密码已通过短信发送</string>
    <string name="account_register_toast_register_ok_mail">注册成功</string>
    <string name="account_register_progressing">注册中,请稍候&#8230;</string>
    <string name="account_login_title">登录搜狐社区</string>
    <string name="account_login_menu_register">注册</string>
    <string name="account_login_passport_hint">账号</string>
    <string name="account_login_password_hint">密码</string>
    <string name="account_login_mis_password">忘记密码？</string>
    <string name="account_login_btn">登录</string>
    <string name="account_login_progressing">登录中,请稍候&#8230;</string>
    <string name="account_login_toast_illegal_passport">账户不合法</string>
    <string name="account_login_toast_illegal_password">密码不合法</string>
    <string name="account_login_toast_illegal_nick">请检查昵称</string>
    <string name="user_info_editor_label">修改个人信息</string>
    <string name="user_info_editor_item_avatar">更换头像</string>
    <string name="user_info_editor_item_nick">昵称</string>
    <string name="user_info_editor_item_gender">性别</string>
    <string name="user_info_editor_item_gender_boy">男</string>
    <string name="user_info_editor_item_gender_girl">女</string>
    <string name="user_info_editor_item_birthday">生日</string>
    <string name="user_info_editor_action_submit">完成</string>
    <string name="master_page_label_my">我的搭配师</string>
    <string name="master_page_label_top">人气搭配师</string>
    <string name="master_page_indictor_tab_topic">话题</string>
    <string name="master_page_indictor_tab_custom">搭配</string>
    <string name="epe_page_label_search_bar">搜索</string>
    <string name="epe_page_label_near_store">附近商家</string>
    <string name="epe_page_label_near_brand">附近品牌</string>
    <string name="item_discount">%s折</string>
    <string name="worth_select_all">全部</string>
    <string name="worth_select_label_gender">想看到的衣服</string>
    <string name="worth_select_male">男</string>
    <string name="worth_select_female">女</string>
    <string name="worth_select_label_sort">排序选项</string>
    <string name="worth_select_discount">折扣</string>
    <string name="worth_select_distance">距离</string>
    <string name="my_focus_label">我的关注</string>
    <string name="my_focus_action_edit_on">完成</string>
    <string name="my_focus_action_edit_off">编辑</string>
    <string name="focus_mall_label">商家</string>
    <string name="focus_brand_label">品牌</string>
    <string name="focus_cancel">取消关注</string>
    <string name="my_page_score">积分：%s</string>
    <string name="my_page_btn_edit">编辑</string>
    <string name="my_page_item_my_home">我的主页</string>
    <string name="my_page_item_my_fav">我的收藏</string>
    <string name="my_page_item_my_custom">我的搭配</string>
    <string name="my_page_item_my_wardrobe">我的衣橱</string>
    <string name="my_page_item_my_type">我的体型</string>
    <string name="my_page_item_my_diary">我的日记</string>
    <string name="my_page_item_log_out">切换帐号</string>
    <string name="user_home_attention_count">关注：%d</string>
    <string name="user_home_fans_count">粉丝：%d</string>
    <string name="user_home_label_t">T台</string>
    <string name="t_editor_action_submit">发布</string>
    <string name="product_editor_label">发布单品</string>
    <string name="product_editor_brand">品牌</string>
    <string name="product_editor_brand_hint">请填写品牌名称</string>
    <string name="product_editor_name">品名</string>
    <string name="product_editor_name_hint">请填写商品名称</string>
    <string name="product_editor_model">型号</string>
    <string name="product_editor_model_hint">请填写单品型号</string>
    <string name="product_editor_price">价格</string>
    <string name="product_editor_price_hint">单位：元</string>
    <string name="product_editor_discount">折扣</string>
    <string name="product_editor_discount_hint">如：88即为88折扣</string>
    <string name="product_editor_tag">标签</string>
    <string name="product_editor_tag_hint">如：运动，休闲，时尚，商务</string>
    <string name="product_editor_type">类型</string>
    <string name="product_editor_type_hint">请选择单品类型</string>
</resources>