<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="tw.supra.epe.account.LoginFrag" >

    <EditText
        android:id="@+id/et_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@android:color/white"
        android:hint="@string/account_frag_hint_phone"
        android:inputType="phone"
        android:padding="@dimen/store_table_item_padding"
        android:textSize="@dimen/store_table_item_text_size" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
        android:background="@android:color/white"
        android:padding="@dimen/store_table_item_padding"
        android:textSize="@dimen/store_table_item_text_size" 
        android:hint="@string/account_frag_hint_password"
        android:inputType="textPassword" />

    <TextView
        android:layout_width="wrap_content"
                android:layout_marginTop="1dp"
        android:padding="@dimen/store_table_item_padding"
        android:layout_height="wrap_content"
        android:text="@string/account_frag_reset_password"
        android:textStyle="italic" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/account_login_frag_title"
        android:layout_margin="10dp"
        android:background="@drawable/btn_bg_round_pink"
        android:padding="10dp"
        android:textColor="@android:color/white"
        android:textSize="@dimen/store_table_item_text_size" />

    <FrameLayout
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/dash_line" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@android:color/white"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/account_login_divider" />
    </FrameLayout>

    <LinearLayout
                android:visibility="gone"
        
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal" >

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/account_login_by_qq" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/account_login_by_wechat" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/account_login_by_weibo" />
    </LinearLayout>

</LinearLayout>