<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:ignore="MergeRootFrame" >

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/top_tab_height"
        android:background="@color/epe_pink"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/product_editor_label"
            android:textColor="@android:color/white"
            android:textSize="@dimen/top_tab_title_text_size" />

        <ImageButton
            android:id="@+id/action_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/top_tab_item_margin"
            android:layout_marginRight="@dimen/top_tab_item_margin"
            android:background="@android:color/transparent"
            android:paddingLeft="@dimen/top_tab_item_padding"
            android:paddingRight="@dimen/top_tab_item_padding"
            android:src="@drawable/ic_action_back" />

        <TextView
            android:id="@+id/action_submit"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="right"
            android:layout_marginLeft="@dimen/top_tab_item_margin"
            android:layout_marginRight="@dimen/top_tab_item_margin"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:paddingLeft="@dimen/top_tab_item_padding"
            android:paddingRight="@dimen/top_tab_item_padding"
            android:text="@string/t_editor_action_submit"
            android:textColor="@android:color/white" />
    </FrameLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@android:color/white"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="10dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:text="@string/product_editor_brand"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/brand"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:gravity="right"
                    android:hint="@string/product_editor_brand_hint"
                    android:singleLine="true"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:background="@android:color/white"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="10dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:text="@string/product_editor_name"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:gravity="right"
                    android:hint="@string/product_editor_name_hint"
                    android:singleLine="true"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:background="@android:color/white"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="10dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:text="@string/product_editor_model"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/model"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:gravity="right"
                    android:hint="@string/product_editor_model_hint"
                    android:singleLine="true"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:background="@android:color/white"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="10dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:text="@string/product_editor_price"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/price"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:gravity="right"
                    android:hint="@string/product_editor_price_hint"
                    android:inputType="number"
                    android:singleLine="true"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:background="@android:color/white"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="10dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:text="@string/product_editor_discount"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/discount"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:gravity="right"
                    android:hint="@string/product_editor_discount_hint"
                    android:inputType="number"
                    android:maxLength="2"
                    android:singleLine="true"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:background="@android:color/white"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="10dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:text="@string/product_editor_tag"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/tag"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:gravity="right"
                    android:hint="@string/product_editor_tag_hint"
                    android:singleLine="true"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:background="@android:color/white"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="10dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:text="@string/product_editor_type"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/type"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:gravity="right"
                    android:hint="@string/product_editor_type_hint"
                    android:singleLine="true"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:background="@android:color/white"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="10dp" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_weight="1"
                    android:text="@string/user_info_editor_item_gender"
                    android:textSize="18sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_boy" />

                <Switch
                    android:id="@+id/gender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/epe_pink"
                    android:textOff="@string/user_info_editor_item_gender_girl"
                    android:textOn="@string/user_info_editor_item_gender_boy" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_girl" />
            </LinearLayout>

            <ImageButton
                android:id="@+id/img"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginTop="10dp"
                android:background="@android:color/white"
                android:padding="15dp"
                android:scaleType="fitStart"
                android:src="@drawable/ic_pick_img" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>