<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    
    
    tools:ignore="MergeRootFrame" >

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/top_tab_height"
        android:background="@color/epe_pink"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/brand_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/user_info_editor_label"
            android:textColor="@android:color/white"
            android:textSize="@dimen/top_tab_title_text_size" />

        <ImageButton
            android:id="@+id/action_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/top_tab_item_margin"
            android:layout_marginRight="@dimen/top_tab_item_margin"
            android:background="@android:color/transparent"
            android:paddingLeft="@dimen/top_tab_item_padding"
            android:paddingRight="@dimen/top_tab_item_padding"
            android:src="@drawable/ic_action_back" />

        <TextView
            android:id="@+id/action_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|right"
            android:layout_marginLeft="@dimen/top_tab_item_margin"
            android:layout_marginRight="@dimen/top_tab_item_margin"
            android:paddingLeft="@dimen/top_tab_item_padding"
            android:paddingRight="@dimen/top_tab_item_padding"
            android:text="@string/user_info_editor_action_submit"
            android:textColor="@android:color/white" />
    </FrameLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:drawablePadding="@dimen/drawable_padding"
        android:drawableRight="@drawable/icon_arrow_right"
        android:background="@android:color/white"
            android:textSize="18sp"
        android:padding="10dp"
        android:text="@string/user_info_editor_item_avatar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:background="@android:color/white"
        android:orientation="horizontal"
        android:padding="10dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/user_info_editor_item_nick" />

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:gravity="right"
            android:background="@null" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:background="@android:color/white"
        android:orientation="horizontal"
        android:padding="10dp" >

        <TextView
            android:layout_width="0dp"
            android:textSize="18sp"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_weight="1"
            android:text="@string/user_info_editor_item_gender" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_boy" />

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/epe_pink"
            android:textOff="@string/user_info_editor_item_gender_girl"
            android:textOn="@string/user_info_editor_item_gender_boy" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_girl" />
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:background="@android:color/white"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="10dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:textSize="18sp"
            android:text="@string/user_info_editor_item_birthday" />

        <TextView
            android:textSize="18sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right" />
    </FrameLayout>

    <Button
        android:id="@+id/logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/my_page_item_log_out" />

</LinearLayout>