<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res/tw.supra.epe"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:gravity="center"
        android:orientation="vertical" >

        <tw.supra.network.ui.NetworkImageView
            android:id="@+id/avator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/attention_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_home_attention_count" />

            <TextView
                android:id="@+id/fans_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_home_fans_count" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/half_transparent"
        android:text="@string/user_home_label_t" />

    <tw.supra.epe.ui.staggered.StaggeredGridView
        android:id="@+id/grid_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:numColumns="2" />

</LinearLayout>